// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`basic 1`] = `
{
  "__v_isVNode": true,
  "__v_skip": true,
  "anchor": null,
  "appContext": null,
  "children": [
    "text",
    null,
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": {
        "_ctx": null,
        "default": [Function],
      },
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": null,
      "ref": null,
      "scopeId": null,
      "shapeFlag": 36,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": {
        "props": {},
        "setup": [Function],
      },
    },
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": {
        "_ctx": null,
        "default": [Function],
      },
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": null,
      "ref": null,
      "scopeId": null,
      "shapeFlag": 36,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": {
        "name": "",
        "props": {},
        "setup": [Function],
      },
    },
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": null,
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": null,
      "ref": null,
      "scopeId": null,
      "shapeFlag": 2,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": [Function],
    },
  ],
  "component": null,
  "ctx": null,
  "dirs": null,
  "dynamicChildren": null,
  "dynamicProps": null,
  "el": null,
  "key": null,
  "patchFlag": 0,
  "props": {
    "id": "hi",
  },
  "ref": null,
  "scopeId": null,
  "shapeFlag": 17,
  "slotScopeIds": null,
  "ssContent": null,
  "ssFallback": null,
  "staticCount": 0,
  "suspense": null,
  "target": null,
  "targetAnchor": null,
  "transition": null,
  "type": "main",
}
`;

exports[`sfc setup 1`] = `
{
  "__v_isVNode": true,
  "__v_skip": true,
  "anchor": null,
  "appContext": null,
  "children": [
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": null,
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": null,
      "ref": null,
      "scopeId": null,
      "shapeFlag": 4,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": {
        "__file": "/home/hiroshi/code/personal/experiments/vue-server/src/fixtures/setup.vue",
        "__name": "setup",
        "render": [Function],
        "setup": [Function],
      },
    },
  ],
  "component": null,
  "ctx": null,
  "dirs": null,
  "dynamicChildren": null,
  "dynamicProps": null,
  "el": null,
  "key": null,
  "patchFlag": 0,
  "props": {
    "id": "hi",
  },
  "ref": null,
  "scopeId": null,
  "shapeFlag": 17,
  "slotScopeIds": null,
  "ssContent": null,
  "ssFallback": null,
  "staticCount": 0,
  "suspense": null,
  "target": null,
  "targetAnchor": null,
  "transition": null,
  "type": "main",
}
`;

exports[`sfc template 1`] = `
{
  "__v_isVNode": true,
  "__v_skip": true,
  "anchor": null,
  "appContext": null,
  "children": [
    {
      "__v_isVNode": true,
      "__v_skip": true,
      "anchor": null,
      "appContext": null,
      "children": null,
      "component": null,
      "ctx": null,
      "dirs": null,
      "dynamicChildren": null,
      "dynamicProps": null,
      "el": null,
      "key": null,
      "patchFlag": 0,
      "props": null,
      "ref": null,
      "scopeId": null,
      "shapeFlag": 4,
      "slotScopeIds": null,
      "ssContent": null,
      "ssFallback": null,
      "staticCount": 0,
      "suspense": null,
      "target": null,
      "targetAnchor": null,
      "transition": null,
      "type": {
        "__file": "/home/hiroshi/code/personal/experiments/vue-server/src/fixtures/basic.vue",
        "render": [Function],
      },
    },
  ],
  "component": null,
  "ctx": null,
  "dirs": null,
  "dynamicChildren": null,
  "dynamicProps": null,
  "el": null,
  "key": null,
  "patchFlag": 0,
  "props": {
    "id": "hi",
  },
  "ref": null,
  "scopeId": null,
  "shapeFlag": 17,
  "slotScopeIds": null,
  "ssContent": null,
  "ssFallback": null,
  "staticCount": 0,
  "suspense": null,
  "target": null,
  "targetAnchor": null,
  "transition": null,
  "type": "main",
}
`;
